--- a/Project.toml
+++ b/Project.toml
@@ -1,12 +1,17 @@
 [deps]
+Cairo = "159f3aea-2a34-519c-b102-8c37f9878175"
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 Comrade = "99d987ce-9a1e-4df8-bc0b-1ea019aa547b"
 ComradeBase = "6d8c423b-a35f-4ef1-850c-862fe21f82c4"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
 Krang = "54806c32-d51a-438d-8447-e0041be2fbfb"
 OptimizationBBO = "3e6eede4-6085-4f62-9a71-46d9bc1eb92b"
 OptimizationOptimisers = "42dfb2eb-d2b4-4451-abcd-913932933ac1"
+Pigeons = "0eb8d820-af6a-4919-95ae-11206f830c31"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Pyehtim = "3d61700d-6e5b-419a-8e22-9c066cf00468"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 VIDA = "4096cdfb-f084-40a3-b02d-1a2a54920cb8"
+VLBIImagePriors = "b1ba175b-8447-452c-b961-7db2d6f7a029"
 VLBISkyModels = "d6343c73-7174-4e0f-bb64-562643efbeca"
